Initial Code Commit

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     Pass
   </body>
   <footer>
-    <a href="https://github.com/ABleasdale1">
+    <a href="https://github.com/ABleasdale1" target="_blank">
       <i class="fa-brands fa-github" style="color: #ff0000;"></i>
     </a>
   </footer>
