--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Runshaw College</title>
     <script>function handleInput(element) {element.setAttribute("placeholder", "");}</script>
     <script src="https://kit.fontawesome.com/8cca80b5d2.js" crossorigin="anonymous"></script>
+    <style>
+    .back-to-top {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #f44336;
+      color: #fff;
+      font-size: 24px;
+      text-align: center;
+      line-height: 40px;
+      cursor: pointer;
+    }
+  </style>
+  <script>
+    window.onscroll = function() { scrollFunction() };
+
+    function scrollFunction() {
+      var backToTopButton = document.getElementById("backToTopButton");
+
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        backToTopButton.style.display = "block";
+      } else {
+        backToTopButton.style.display = "none";
+      }
+    }
+
+    function backToTop() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
   </head>
   <header>
     <div style="background-color: lightgrey;" align="right">
@@ -15,25 +50,28 @@
       </a>
       <table style="background-color: black; color: white;">
         <tr>
+          <td>
+            <i class="fa-brands fa-accessible-icon" style="color: #ffffff;"></i>
+          </td>
           <td><b>CONTRAST</b></td>
           <td style="background-color: white;">
-            <i class="fa-solid fa-sun" style="color: #000000;"></i>
+            <button><i class="fa-solid fa-sun" style="color: #000000;"></i></button>
           </td>
           <td style="background-color: white;">
-            <i class="fa-regular fa-moon" style="color: #000000;"></i>
+            <button><i class="fa-regular fa-moon" style="color: #000000;"></i></button>
           </td>
           <td style="background-color: white;">
-            <i class="fa-solid fa-eye" style="color: #000000;"></i>
+           <button><i class="fa-solid fa-eye" style="color: #000000;"></i></button>
           </td>
           <td><b>FONT</b></td>
           <td style="background-color: white;">
-            <i class="fa-solid fa-circle-minus" style="color: #000000;"></i>
+            <button><i class="fa-solid fa-circle-minus" style="color: #000000;"></i></button>
           </td>
           <td style="background-color: white;">
-            <i class="fa-solid fa-a" style="color: #000000;"></i>
+            <button><i class="fa-solid fa-a" style="color: #000000;"></i></button>
           </td>
           <td style="background-color: white;">
-            <i class="fa-solid fa-circle-plus" style="color: #000000;"></i>
+            <button><i class="fa-solid fa-circle-plus" style="color: #000000;"></i></button>
           </td>
         </tr>
       </table>
@@ -107,12 +145,12 @@
     </div>
   </header>
   <body>
+    <button class="back-to-top" id="backToTopButton" onclick="backToTop()"><i class="fa-solid fa-elevator fa-xs" style="color: #ffffff;"></i></button>
     <div align="center">
       <table>
         <tr>
           <td>
             <iframe width="1000" height="600" src="https://www.youtube.com/embed/CerI5LWC8LY?autoplay=1" frameborder="0" ></iframe>
-            
           </td>
         </tr>
         <tr>
